examples/get-started/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: songhao
spec:
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "httpbin.example.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
  namespace: songhao
spec:
  hosts:
    - "httpbin.example.com"
  gateways:
    - gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: httpbin
        port:
          number: 8000
